- Fix an issue with comments layout broken when suing card style.

--- a/assets/css/src/misc.scss
+++ b/assets/css/src/misc.scss
@@ -204,7 +204,7 @@
     padding: 0
   }
 
-  article {
+  article.entry {
     background: $card-bg;
     padding: $padding*1/4 $padding/2 0;
     margin: 0 0 27px;
